fix: mobile header screen error is not centered

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,7 @@ body {
 
 .header__main {
   height: 12vh;
+  width: 100%;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.048);
 }
 .header__main #nav {
