--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -4,6 +4,7 @@ body {
 
 .header__main {
 	height: 12vh;
+	width: 100%;
 	box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.048);
 	#nav {
 		height: 100%;
